# AkaneQQBot

./: Akane_quick_start.bat  README.md  README_ZH.md  Tutorail.md  local_server.txt  requirements.txt  test.py
AkaneBot/: .env.dev  .env.prod  README.md  bot.py  pyproject.toml  random_numbers.pickle
AkaneBot/akanebot/plugins/dice_plugin/: __init__.py
AkaneBot/akanebot/plugins/gpt_plugin/: __init__.py
AkaneBot/akanebot/plugins/help_plugin/: __init__.py
AkaneBot/akanebot/plugins/maimai_plugin/: maimaidx.py  public.py
AkaneBot/akanebot/plugins/maimai_plugin/libraries/: image.py  maimai_best_40.py  maimai_best_50.py
AkaneBot/akanebot/plugins/setu_plugin/: __init__.py
AkaneBot/akanebot/plugins/yuanshen_plugin/: __init__.py
AkaneBot/data/arcaea/: config.yml  user_data.db
AkaneBot/data/capoo/: md5.db
AkaneBot/data/osu/user/16533846/: icon.peg
AkaneBot/src/libraries/: config.py  tool.py
AkaneBot/src/plugins/: database.py  maimaidx.py  maimaidx.txt  public.py  sys.py
AkaneBot/src/plugins/DicePP/Data/Bot/1795852754/: activate.json  chat_record.json  group_data.json  meta.json  nickname.json  user_data.json
AkaneBot/src/plugins/DicePP/Data/Config/: chat.xlsx  config.xlsx  localization.xlsx
AkaneBot/src/static/: Akane.db  Suzuno.db  rp.pickle
AkaneENV/: pyvenv.cfg
AkaneENV/Scripts/: pwiz.py  (+2 more)
Qsign-Onekey-1.1.9-bitterest/: Start_Qsign.bat  config.yml  device.json  session.token  txlib_version.json
chat/: db.sqlite3
go-cqhttp/: config.yml  device.json  session.token
go-cqhttp-windows-i386/: config.yml  device.json  password.encrypt  session.token
(+71 files in other folders)
