[project]
name = "AkaneBot"
version = "0.1.0"
description = "AkaneBot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "Telegram", module_name = "nonebot.adapters.telegram" },
    { name = "Console", module_name = "nonebot.adapters.console" }
]
plugins = ["nonebot_plugin_capoo"]
plugin_dirs = ["akanebot/plugins"]
builtin_plugins = ["echo", "single_session"]
